[tool.poetry]
name = "voron_toolkit"
version = "0"
description = "A repository & docker container containing all necessary tools to accomplish CI tasks and provide useful CLI tools"
authors = ["Florian Heilmann <Florian.Heilmann@gmx.net>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "voron_toolkit"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
admesh = "^0.98.9"
configargparse = "^1.7"
githubkit = "^0.10.7"
gitpython = "^3.1.40"
imagekitio = "^3.2.0"
jsonschema = "^4.20.0"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
requests = "^2.31.0"
tweaker3 = {git = "https://github.com/ChristophSchranz/Tweaker-3.git"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
ruff = "^0.1.5"
types-pyyaml = "^6.0.12.12"
types-requests = "<2.31.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 160
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]

select = ["ALL" ]
ignore = [
    "D", # no docs
    "ISC001", "COM812", # Might cause issues with formatter
    "PLE1205", # ruff gets confused about loguru
    "TRY300", # competes with RET505
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[[tool.mypy.overrides]]
module = [
    "admesh.*",
    "configargparse.*",
    "imagekitio.*",
    "jsonschema.*",
    "tweaker3.*",
]
ignore_missing_imports = true

[tool.poetry.scripts]
check-mod-structure = "voron_toolkit.tools.mod_structure_checker:main"
check-stl-corruption = "voron_toolkit.tools.stl_corruption_checker:main"
check-stl-rotation = "voron_toolkit.tools.stl_rotation_checker:main"
check-whitespace = "voron_toolkit.tools.whitespace_checker:main"
debug-container = "voron_toolkit.utils.debug_container:print_container_info"
generate-readme = "voron_toolkit.tools.readme_generator:main"
sanitize-file-list = "voron_toolkit.utils.file_helper:sanitize_file_list"
set-pr-comment-labels = "voron_toolkit.utils.pr_helper:main"
upload-images = "voron_toolkit.utils.imagekit_uploader:main"
